<?xml version="1.0"?>
<package format="2">
  <name>my_behavior</name>
  <version>1.5.0</version>
  <description>RoboCar 1/10 behavior</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>


  <depend>laser_geometry</depend>
  <depend>roscpp</depend>

  <depend>eigen</depend>
</package>
